<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ads">true</string>
    <string name="app_name">Animals Memory Game</string>
    <string name="com.crashlytics.android.build_id">4b52dc8a-db12-43c9-a1e6-b717aca631c4</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="default_web_client_id">106216920939-91023fb96or6mo512e0ouq10tev12iop.apps.googleusercontent.com</string>
    <string name="dpi">hdpi</string>
    <string name="firebase_database_url">https://animals-memory-game-2.firebaseio.com</string>
    <string name="ga_trackingId">UA-41005384-2</string>
    <string name="gcm_defaultSenderId">106216920939</string>
    <string name="google_api_key">AIzaSyBM8lDeGKvdBLpuDmiLm8prZWY8B69qxfs</string>
    <string name="google_app_id">1:106216920939:android:bcc762911b75f20e</string>
    <string name="google_crash_reporting_api_key">AIzaSyBM8lDeGKvdBLpuDmiLm8prZWY8B69qxfs</string>
    <string name="google_storage_bucket">animals-memory-game-2.appspot.com</string>
    <string name="image_content_description">image placeholder</string>
    <string name="main_button_easy">Easy</string>
    <string name="main_button_hard">Hard</string>
    <string name="main_button_normal">Normal</string>
    <string name="main_purchase_completed">Thank you! Your purchase was successful.</string>
    <string name="main_remove_ads">REMOVE ADS</string>
    <string name="more_title">MORE GAMES</string>
    <string name="more_title_animals_2">Animals memory game</string>
    <string name="more_title_cars">Cars memory game</string>
    <string name="more_title_fruit">Fruit memory game</string>
    <string name="more_title_piano">Baby piano</string>
    <string name="more_title_princess">Princess memory game</string>
    <string name="notification_subtitle">Let’s have fun with Animals Memory Game!</string>
    <string name="notification_title">Animals Memory Game</string>
    <string name="play_dialog_completed">Completed</string>
    <string name="play_dialog_game_over_bottom">Game Over</string>
    <string name="play_dialog_game_over_up">Time\'s up</string>
    <string name="play_dialog_game_won_bottom">Completed</string>
    <string name="play_dialog_game_won_up">Game</string>
    <string name="play_dialog_level">Level</string>
    <string name="play_dialog_score">Time</string>
    <string name="play_fragment_level">Level:</string>
    <string name="play_fragment_score">Score:</string>
    <string name="premium_dialog_buy">Buy</string>
    <string name="premium_dialog_text">This purchase provides access to high score and remove all advertisement!</string>
    <string name="premium_dialog_title">Highscore</string>
    <string name="privacy_details">See details</string>
    <string name="privacy_msg">We use device identifiers and share it with our partners to improve your user experience.</string>
    <string name="privacy_ok">OK</string>
    <string name="privacy_title">Privacy Policy</string>
    <string name="project_id">animals-memory-game-2</string>
    <string name="rate_later_button">Later</string>
    <string name="rate_rate_button">Rate</string>
    <string name="rate_text">Enjoying the game? Please give us a rate (5 stars means the best)</string>
    <string name="rate_title">Rate us</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="score_dialog_close">Close</string>
    <string name="score_dialog_easy">Easy:</string>
    <string name="score_dialog_hard">Hard:</string>
    <string name="score_dialog_medium">Medium:</string>
    <string name="score_dialog_score">score</string>
    <string name="score_dialog_title">Highscore</string>
    <string name="search_menu_title">Search</string>
    <string name="settings_save">Save</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_timer">Timer</string>
    <string name="settings_title">SETTINGS</string>
    <string name="status_bar_notification_info_overflow">999+</string>
</resources>
